@@ -103,7 +103,9 @@ namespace CardMaker.Card.FormattedText.Markup
         public override bool Render(ProjectLayoutElement zElement, Graphics zGraphics)
         {
             // already null checked in the ProcessMarkup
-            var zBmp = DrawItem.LoadImageFromCache(m_sImageFile);
+            var zBmp = 255 != zElement.opacity
+                ? DrawItem.LoadOpacityImageFromCache(m_sImageFile, zElement)
+                : DrawItem.LoadImageFromCache(m_sImageFile);
             zGraphics.DrawImage(zBmp, TargetRect.X + m_fXOffset, TargetRect.Y + m_fYOffset, m_nWidth, m_nHeight);
 
             if (CardMakerInstance.DrawFormattedTextBorder)
